git navbar route added

--- a/signUp.html
+++ b/signUp.html
@@ -31,12 +31,17 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
-
-
-
 </head>
 
+
+
+
+
+
 <body>
+
+
+
     <div class="container-xxl bg-white p-0">
         <!-- Spinner Start -->
         <div id="spinner"
@@ -189,30 +194,6 @@
                                         </a>
                                     </p>
 
-
-                                    <!-- <div class="d-flex align-items-center my-2 ">
-                                        <hr
-                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                        <h6>OR</h6>
-                                        <hr
-                                            style="height:2px; width:100%; border-width:0; color:rgb(85, 79, 79); background-color:rgb(85, 79, 79)">
-                                    </div>
-
-                                    <button
-                                        class="btn btn-primary w-100 text-center d-flex align-items-center justify-content-center  "
-                                        id="googleButton">
-                                        <i style="background: conic-gradient(from -45deg, #ea4335 110deg, #4285f4 90deg 180deg, #34a853 180deg 270deg, #fbbc05 270deg) 73% 55%/150% 150% no-repeat;
-                                                                            -webkit-background-clip: text;
-                                                                            background-clip: text;
-                                                                            color: transparent;
-                                                                            -webkit-text-fill-color: transparent;"
-                                            class="fab fa-google fa-2x">
-                                        </i>
-                                        <span class="mx-3">SignUp With Google</span>
-                                    </button> -->
-
-
-
                                 </div>
                             </div>
                         </div>
@@ -220,44 +201,45 @@
                 </div>
             </div>
         </section>
+
         <!------------------------------------------------------------ sign up end-------------------------------------------------------------- -->
 
         <!-- Footer Start -->
-        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn" data-wow-delay="0.1s">                <div class="container py-5 px-lg-5">
-            <div class="row g-5">
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
-                        KOLKATA
-                        Kolkata - 700048
-                        West Bengal - India</p>
-                    <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
-                    <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social" href=""><i
-                                class="fab fa-linkedin-in"></i></a>
+        <div class="container-fluid bg-primary text-light footer mt-5 pt-5 wow fadeIn circle-animationn triangle-animationn"
+            data-wow-delay="0.1s">
+            <div class="container py-5 px-lg-5">
+                <div class="row g-5">
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Get In Touch</h5>
+                        <p><i class="fa fa-map-marker-alt me-3"></i>16, GOLAGHATA ROAD
+                            KOLKATA
+                            Kolkata - 700048
+                            West Bengal - India</p>
+                        <p><i class="fa fa-phone-alt me-3"></i>+91 93391 19671</p>
+                        <p><i class="fa fa-envelope me-6"></i>consult.pragya@gmail.com</p>
+                        <div class="d-flex pt-2">
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Popular Link</h5>
-                    <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
-                    <a class="btn btn-link" href="team.html">Contact Us</a>
-                <!--
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Popular Link</h5>
+                        <a class="btn btn-link" href="https://msme.gov.in/">MSME</a>
+                        <a class="btn btn-link" href="team.html">Contact Us</a>
+                        <!--
 
                     <a class="btn btn-link" href="">Privacy Policy</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
                 -->
-                    <a class="btn btn-link" href="career.html">Career</a>
-                </div>
+                        <a class="btn btn-link" href="career.html">Career</a>
+                    </div>
 
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visitors</h5>
-                    <!--
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visitors</h5>
+                        <!--
                 <div class="row g-2">
                     <div class="col-4">
                         <img class="img-fluid" src="img/portfolio-1.jpg" alt="Image">
@@ -279,48 +261,52 @@
                     </div>
                 </div>
             -->
-                    <a href="https://info.flagcounter.com/lzyD"><img
-                            src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
-                            alt="Flag Counter" border="0"></a>
-                </div>
-                <div class="col-md-6 col-lg-3">
-                    <h5 class="text-white mb-4">Visit Our Office</h5>
-                    <div class="position-relative w-100 mt-3">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>                        </div>
-                </div>
-            </div>
-        </div>
-        <div class="container px-lg-5">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
-                        Right
-                        Reserved.
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <br>
-                        <div class="hider" style="color: #a3c0d4;">
-                            Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
-                                href="https://htmlcodex.com">HTML Codex</a>
+                        <a href="https://info.flagcounter.com/lzyD"><img
+                                src="https://s01.flagcounter.com/count/lzyD/bg_FFFFFF/txt_000000/border_CCCCCC/columns_2/maxflags_20/viewers_3/labels_1/pageviews_0/flags_0/percent_0/"
+                                alt="Flag Counter" border="0"></a>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <h5 class="text-white mb-4">Visit Our Office</h5>
+                        <div class="position-relative w-100 mt-3">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14734.120003072445!2d88.39084748883161!3d22.59667536388648!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027609ac26dc25%3A0x2b04a8cbea9694ae!2s16%2C%20Golaghata%20Rd%2C%20Sreebhumi%2C%20Dakshindari%2C%20Kolkata%2C%20West%20Bengal%20700048!5e0!3m2!1sen!2sin!4v1678528923980!5m2!1sen!2sin"
+                                width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"></iframe>
                         </div>
                     </div>
-                    <div class="col-md-6 text-center text-md-end">
-                        <div class="footer-menu">
-                            <a href="index.html">Home</a>
-                            <!--
+                </div>
+            </div>
+            <div class="container px-lg-5">
+                <div class="copyright">
+                    <div class="row">
+                        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                            &copy; <a class="border-bottom" href="index.html">Q Stratups Private Limited</a>, All
+                            Right
+                            Reserved.
+
+                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
+                            <br>
+                            <div class="hider" style="color: #a3c0d4;">
+                                Designed By <a style="color: #a3c0d4;" class="border-bottom-black"
+                                    href="https://htmlcodex.com">HTML Codex</a>
+                            </div>
+                        </div>
+                        <div class="col-md-6 text-center text-md-end">
+                            <div class="footer-menu">
+                                <a href="index.html">Home</a>
+                                <!--
 
                             <a href="">Cookies</a>
                             <a href="">Help</a>
                             <a href="">FQAs</a>
                         -->
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!--
+        <!--
 
         <div class="circle">
             <img src="/img/circle.png" alt="">
@@ -330,12 +316,17 @@
         </div>
     -->
     </div>
-<!-- Footer End -->
+    <!-- Footer End -->
 
 
-        <!-- Back to Top -->
-        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
+    <!-- Back to Top -->
+    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top pt-2"><i class="bi bi-arrow-up"></i></a>
     </div>
+
+
+
+
+
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
@@ -351,13 +342,7 @@
     <script src="js/main.js"></script>
 
     <!-- javascript for signUp -->
-    <script type="module" src="js/signUpJs/signUp.js"></script>
-    <!-- <script type="module" src="js/signUpJs/function.js"></script> -->
-    <!-- firebase script -->
-
-    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-app.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-auth.js"></script>
-    <script type="module" src="https://www.gstatic.com/firebasejs/9.17.2/firebase-firestore.js"></script>
+    <script src="js/signUpJs/signUp.js"></script>
 
 </body>
 
