--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -136,7 +136,7 @@
 
   <!-- <script>
     // Fetch data from backend
-    fetch('http://localhost:5000/admin/getAllStartUp?role=startUp')
+    fetch('https://qstartup-server.vercel.app/admin/getAllStartUp?role=startUp')
       .then(response => response.json())
       .then(data => {
         // Get table body element
