--- a/index.html
+++ b/index.html
@@ -657,9 +657,11 @@
         console.log(LocalCurrentUser)
         if (LocalCurrentUser) {
             document.querySelector('#logout').style.display = 'block'
-        } else {
+        }
+        else {
             document.querySelector('#login').style.display = 'block'
         }
+
     </script>
 </body>
 
