mentor table adjusted

--- a/admin/mentor.html
+++ b/admin/mentor.html
@@ -100,7 +100,7 @@
                 </ul>
             </div>
 
-
+          </nav>
   <div class="wrapper">
     <div class="container ">
       <div class="row">
