id creation with S or M

--- a/Registration.html
+++ b/Registration.html
@@ -316,7 +316,8 @@
                                         <div class="two-cols">
                                             <label>
                                                 StartUp Email address * [can't change]
-                                                <input type="email" name="email_StartUp" id="startupUserEmail" required>
+                                                <input type="email" name="email_StartUp" id="startupUserEmail" required
+                                                    readonly>
                                             </label>
 
                                             <label>
