--- a/admin/startup.html
+++ b/admin/startup.html
@@ -83,7 +83,7 @@
           <li>
             <i class="fa fa-info-circle coral" aria-hidden="true"></i>
             <a href="./editdetails.html">Details</a>
-        </li>
+          </li>
 
         </ul>
       </div>
@@ -120,9 +120,9 @@
                 <th data-field="id" data-sortable="true">ID</th>
                 <th data-field="name" data-sortable="true">StartUpName</th>
                 <th data-field="sturtupPhone" data-sortable="true">phone</th>
-                <th data-field="contact" data-sortable="true">Phone</th>
+
                 <th data-field="email" data-sortable="true">Email</th>
-                <th data-field="mentor name">User Name</th>
+                <!-- <th data-field="mentor name">User Name</th> -->
                 <th data-field="actions" data-formatter="operateFormatter" data-events="operateEvents">Actions</th>
               </thead>
 
