--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -35,7 +35,9 @@
             padding: 0.5rem 1rem 0.5rem 1rem;
             margin-left: 10px;
         }
-        .navbar-brand:hover, .btnChangeCard:hover {
+
+        .navbar-brand:hover,
+        .btnChangeCard:hover {
             letter-spacing: 0.2rem;
             transition: 0.3s;
             color: #ffffff;
@@ -55,19 +57,28 @@
             margin-left: 1rem;
             padding: 1rem;
         }
-        .Dashboard, .Inbox, .Settings, .AddDetails, .Services, .ScheduleMeeting, .StartupList, .Message{
-            -webkit-filter: drop-shadow( 5px 5px 5px rgba(56, 53, 53, 0.72));
-            filter: drop-shadow(5px 5px 5px 5px rgb(59, 57, 57));
-        }
-        .navbar_css{
-            border-radius: 20px;
-            margin: 1rem 2rem 1rem 2rem;
-            background-color: white;
-            -webkit-filter: drop-shadow( 5px 5px 5px rgba(56, 53, 53, 0.72));
+
+        .Dashboard,
+        .Inbox,
+        .Settings,
+        .AddDetails,
+        .Services,
+        .ScheduleMeeting,
+        .StartupList,
+        .Message {
+            -webkit-filter: drop-shadow(5px 5px 5px rgba(56, 53, 53, 0.72));
             filter: drop-shadow(5px 5px 5px 5px rgb(59, 57, 57));
         }
 
-        .navbar-brand{
+        .navbar_css {
+            border-radius: 20px;
+            margin: 1rem 2rem 1rem 2rem;
+            background-color: white;
+            -webkit-filter: drop-shadow(5px 5px 5px rgba(56, 53, 53, 0.72));
+            filter: drop-shadow(5px 5px 5px 5px rgb(59, 57, 57));
+        }
+
+        .navbar-brand {
             border-radius: 20px;
             padding: 0.5rem 1rem 0.5rem 1rem;
             border: 1px solid rgb(118, 116, 116);
@@ -129,7 +140,7 @@
                     </li>
                     <li class="nav-item">
                         <input class="btnChangeCard" type="button" value="Logout">
-                            <i class="fa fa-sign-out" aria-hidden="true"></i>
+                        <i class="fa fa-sign-out" aria-hidden="true"></i>
                     </li>
                 </ul>
             </div>
@@ -702,15 +713,15 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-tieMail">TIE Email ID *</label>
-                                    <input required type="text" id="input-tieMail" class="form-control" placeholder="TIE Email ID"
-                                        value="">
+                                    <input required type="text" id="input-tieMail" class="form-control"
+                                        placeholder="TIE Email ID" value="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-tiePassword">TIE Password *</label>
-                                    <input required type="" id="input-tiePassword" class="form-control" placeholder="TIE PAssword"
-                                        value="">
+                                    <input required type="" id="input-tiePassword" class="form-control"
+                                        placeholder="TIE PAssword" value="">
                                 </div>
                             </div>
                         </div>
