social media link edit done

--- a/Registration.html
+++ b/Registration.html
@@ -328,7 +328,7 @@
                                         <div class="two-cols">
                                             <label>
                                                 Registered State
-                                                <input type="text" name="Citizenship_StartUp">
+                                                <input type="text" name="state_StartUp">
                                             </label>
                                             <label>
                                                 Registered City
