--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -487,48 +487,49 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form action="">
+                    <form action="" id="socialMediaForm">
                         <h6 class="heading-small text-muted mb-4">Social Media information</h6>
 
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-twitter">Twitter</label>
-                                    <input type="text" id="input-twitter" class="form-control" placeholder="https://"
-                                        value="">
+                                    <input type="text" name="twitter" id="input-twitter" class="form-control"
+                                        placeholder="https://" value="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-linkedin">Linkedin</label>
-                                    <input type="text" id="input-linkedin" class="form-control" placeholder="https://"
-                                        value="">
+                                    <input name="linkdIn" type="text" id="input-linkedin" class="form-control"
+                                        placeholder="https://" value="">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Instagram">Instagram</label>
-                                    <input type="email" id="input-Instagram" class="form-control"
+                                    <input type="text" name="instagram" id="input-Instagram" class="form-control"
                                         placeholder="https://">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Facebook">Facebook</label>
-                                    <input type="email" id="input-Facebook" class="form-control" placeholder="https://">
+                                    <input type="text" name="facebook" id="input-Facebook" class="form-control"
+                                        placeholder="https://">
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label" for="input-Business_Documents">Business
                                         Documents</label>
-                                    <input type="file" id="input-Business_Documents" class="form-control" placeholder=""
-                                        value="">
+                                    <input type="file" name="bussinesDoucument" id="input-Business_Documents"
+                                        class="form-control" placeholder="" value="">
                                 </div>
                             </div>
                         </div>
                         <button type="reset" class="btn bg-gradient-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn bg-gradient-primary">Save changes</button>
+                        <button type="submit" class="btn bg-gradient-primary">Save changes</button>
 
                     </form>
                 </div>
@@ -1228,7 +1229,7 @@
             };
         </script>
         <script src="./assets/js/loopple/loopple.js"></script>
-        <script src="../../js/UserPannel.js/StartupPannel.js/startUpsUserPannel.js"></script>
+        <script src="../../js/UserPannel.js/StartupPannel.js/UserPannelstartUps.js"></script>
 
 </body>
 
