--- a/index.html
+++ b/index.html
@@ -461,6 +461,40 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item">
+                            <div class="d-flex">
+                                <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
+                                    style="width: 75px;">
+                                    <a class="btn btn-square text-primary bg-white my-1"
+                                        href="https://www.linkedin.com/in/prabal-chatterjee-17759621/?originalSubdomain=in"><i
+                                            class="fab fa-linkedin-in"></i></a>
+                                </div>
+                                <img class="img-fluid rounded w-100" src="img/prabalChatterjee.JPG" alt="">
+                            </div>
+                            <div class="px-4 py-3">
+                                <h5 class="fw-bold m-0">Mr. Prabal Chatterjee</h5>
+                                <small>PGDPM</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item">
+                            <div class="d-flex">
+                                <div class="flex-shrink-0 d-flex flex-column align-items-center mt-4 pt-5"
+                                    style="width: 75px;">
+                                    <a class="btn btn-square text-primary bg-white my-1"
+                                        href="https://www.linkedin.com/in/dilip-kumar-gayen-5912ab12/?originalSubdomain=in"><i
+                                            class="fab fa-linkedin-in"></i></a>
+                                </div>
+                                <img class="img-fluid rounded w-100" src="img/dilipKumarGayen.jpg" alt="">
+                            </div>
+                            <div class="px-4 py-3">
+                                <h5 class="fw-bold m-0">Mr. Dilip Kumar Gayen</h5>
+                                <small>Manufacturing & Business Expert</small>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="team-item">
                             <div class="d-flex">
@@ -483,7 +517,7 @@
                                 <img class="img-fluid rounded w-100" src="img/vibhortandon.jpeg" alt="">
                             </div>
                             <div class="px-4 py-3">
-                                <h5 class="fw-bold m-0">Vibhor Tandon</h5>
+                                <h5 class="fw-bold m-0">Mr. Vibhor Tandon</h5>
                                 <small>Regional Head MCX</small>
                             </div>
                         </div>
