--- a/service.html
+++ b/service.html
@@ -181,6 +181,42 @@
                             -->
                         </div>
                     </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <!--
+                                <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            -->
+                                <h5 class="mb-3">Mr. Prabal Chatterjee </h5>
+                                <p> (PGDPM from IMM - 1984)</p>
+                            <p>Presently he is the Co owner of MTB. He is currently inducted as a Qstartup acceleration mentor.
+                                He was associated with the
+                                Earlier, he was the CMD of Riverside Management Academy Private Limited.
+                                He was associated with the Earlier, he was the CMD of RMA Pvt Ltd.</p>
+                            <!--
+                                <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            -->
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <!--
+                                <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            -->
+                                <h5 class="mb-3">Mr. Prabal Chatterjee </h5>
+                                <p> (PGDPM from IMM - 1984)</p>
+                            <p>Expert on Productivity, Quality Improvement & Manufacturing
+                                MBA, PGDPM, ME and Pursuing PhD in Efficiency Scorecard, TQM and TPM Trained
+                                from Asian Productivity Organization, Japan. Multi-Country Study in SME at Taiwan under
+                                Published Three Books on Productivity, Quality and Efficiency Improvement Models</p>
+                            <!--
+                                <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                            -->
+                        </div>
+                    </div>
                     <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column justify-content-center text-center rounded">
                             <!--
@@ -190,7 +226,8 @@
                             -->
                             <h5 class="mb-3">Dr CS Mrs. Mamta Binani</h5>
                             <p>(14th Rank in ICSI-1996)</p>
-                            <p>She is the National Past President of ICSI for the year 2016. She relinquished the office of President on 19th January, 2017. Awards & Business E-Summit In 2021 at Emirates Ballroom, Marriott Marquis Hotel, Dubai.</p>
+                            <p>She is the National Past President of ICSI for the year 2016. She relinquished the office of President on 19th January, 2017. Awards & Business E-Summit In 2021 at Emirates Ballroom, Marriott Marquis Hotel, Dubai. Bharat Nirman Awards in the year 2010 for Excellence in
+                                Professional Services</p>
                             <!--
                                 <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
                             -->
