--- a/userPanel/mentorPanel/index.html
+++ b/userPanel/mentorPanel/index.html
@@ -1047,10 +1047,10 @@
             </div>
         </div>
         <div class="loopple-alert loopple-alert-gradient-dark loopple-alert-dismissible loopple-fade loopple-position-fixed loopple-z-index-9999 loopple-bottom-2 loopple-mx-auto loopple-text-center loopple-right-0 loopple-left-0 loopple-w-50"
-            role="alert"><strong>View and edit your project online</strong><a
+            role="alert"><strong>View the upcomming events</strong><a
                 class="loopple-btn loopple-btn-white loopple-ml-2"
-                href="https://www.loopple.com/builder/project-pfHAk8NtEKpWxMlIfCcAS5wYbLRA1K6s3L1"
-                target="_blank">Editor</a><button type="button" class="close" data-dismiss="alert"
+                href="#"
+                target="_blank">Events</a><button type="button" class="close" data-dismiss="alert"
                 aria-label="Close"><span aria-hidden="true">×</span></button></div>
         <script src="https://demos.creative-tim.com/soft-ui-dashboard/assets/js/core/popper.min.js"></script>
         <script src="https://demos.creative-tim.com/soft-ui-dashboard/assets/js/core/bootstrap.min.js"></script>
