get data from users startup from

--- a/Registration.html
+++ b/Registration.html
@@ -337,7 +337,7 @@
                                         </div>
                                         <label>
                                             Company URL
-                                            <input type="text" name="Address_StartUp">
+                                            <input type="text" name="companyUrl_StartUp">
                                         </label>
                                         <div class="two-cols">
 
