--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -597,8 +597,8 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-url">Company URL</label>
-                                        <input id="input-url" class="form-control" placeholder="https://" value=""
-                                            type="text">
+                                        <input id="input-url" name="companyUrl_StartUp" class="form-control"
+                                            placeholder="https://" value="" type="text">
                                     </div>
 
                                 </div>
