add details users startup froms data save to database done

--- a/userPanel/startupPanel/index.html
+++ b/userPanel/startupPanel/index.html
@@ -605,8 +605,8 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-District">District</label>
-                                        <input id="input-District" class="form-control" placeholder="District" value=""
-                                            type="text">
+                                        <input id="input-District" name="district_startUp" class="form-control"
+                                            placeholder="District" value="" type="text">
                                     </div>
 
                                 </div>
@@ -623,15 +623,15 @@
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-country">Country</label>
-                                        <input type="text" id="input-country" class="form-control" placeholder="Country"
-                                            value="">
+                                        <input type="text" name="country_startUp" id="input-country"
+                                            class="form-control" placeholder="Country" value="">
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="form-group">
                                         <label class="form-control-label" for="input-code">Postal code</label>
-                                        <input type="number" id="input-code" class="form-control"
-                                            placeholder="Postal code">
+                                        <input type="number" name="postalCode_startup" id="input-code"
+                                            class="form-control" placeholder="Postal code">
                                     </div>
                                 </div>
                             </div>
