--- a/admin/Edit.html
+++ b/admin/Edit.html
@@ -197,7 +197,7 @@
                                         <div class="two-cols">
                                             <label>
                                                 State
-                                                <input type="text" name="Citizenship_Mentor">
+                                                <input type="text" name="state_Mentor">
                                             </label>
                                             <label>
                                                 City
